# twitch-overlay

./: .gitignore  AGENTS.md  AI.md  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  app.go  conductor.json  go.mod  go.sum  main.go  wails.json  window_darwin.go  window_linux.go  window_other.go  window_windows.go
.ai/: git.md  (+12 more)
crates/catprinter/: Cargo.toml
crates/catprinter/src/: ble.rs  ble_init.rs  keepalive.rs  lib.rs  options.rs
crates/catprinter/src/protocol/: gb.rs  mod.rs  mxw01.rs
crates/overlay-db/: Cargo.toml
crates/overlay-db/src/: broadcast_cache.rs  cache.rs  chat.rs  lib.rs  lottery.rs  lottery_engine.rs  lottery_engine_tests.rs  lottery_history.rs  lottery_settings.rs  music.rs  rewards.rs  schema.rs  settings.rs  tokens.rs  word_filter.rs
crates/overlay-db/src/chat/: badge_keys.rs  irc.rs  message_store.rs  models.rs  user_profiles.rs
crates/overlay-db/src/rewards/: counts.rs  groups.rs  models.rs  optional_ext.rs
crates/overlay-db/src/schema/: migrations.rs  schema_sql.rs
crates/overlay-db/src/tests/: cache.rs  chat.rs  core.rs  lottery.rs  mod.rs  music.rs  rewards.rs  word_filter.rs
crates/twitch-client/: Cargo.toml
crates/twitch-client/src/: api.rs  auth.rs  emotes.rs  eventsub.rs  lib.rs
crates/twitch-client/src/api/: channels.rs  mod.rs  models.rs  moderation.rs  request.rs  rewards.rs  streams.rs  subscriptions.rs  users.rs
crates/twitch-client/src/emotes/: api.rs  cache.rs  mod.rs  tests.rs
crates/twitch-client/src/eventsub/: connection.rs  mod.rs  tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  background.rs  bootstrap.rs  chat_filter.rs  events.rs  eventsub_events.rs  eventsub_handler.rs  eventsub_support.rs  lib.rs  main.rs  shutdown.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: app_config.rs  defaults.rs  manager.rs  mod.rs  validation.rs
src-tauri/src/config/defaults/: defs_part1.rs  defs_part2.rs  defs_part3.rs  defs_part4.rs  defs_part5.rs
src-tauri/src/eventsub_events/: chat.rs
src-tauri/src/notification/: mod.rs  queue.rs  types.rs  window.rs
src-tauri/src/notification/window/: settings.rs
src-tauri/src/server/: assets.rs  mod.rs  router.rs  websocket.rs
src-tauri/src/server/api/: cache.rs  chat.rs  debug.rs  emotes.rs  fax.rs  font.rs  logs.rs  mod.rs  music.rs  music_playlist.rs  music_state.rs  overlay.rs  present.rs  printer.rs  reward.rs  settings.rs  twitch.rs  word_filter.rs
src-tauri/src/server/api/chat/: endpoints_1.rs  endpoints_2.rs  endpoints_3.rs  endpoints_4.rs  identity.rs  irc_send.rs  prelude.rs  profile.rs
src-tauri/src/server/api/emotes/: cache.rs  grouping.rs  prelude.rs  runtime.rs
src-tauri/src/server/router/: final_routes.rs  primary_routes.rs  secondary_routes.rs  status_handler.rs  upload_routes.rs
src-tauri/src/services/: cache.rs  channel_points_assets.rs  channel_points_emote_cache.rs  channel_points_fax.rs  channel_points_parse.rs  clock_bits.rs  clock_fax.rs  clock_print.rs  fax.rs  font.rs  log_buffer.rs  mod.rs  music.rs  music_playlist.rs  print_queue.rs  printer.rs  printer_helpers.rs  printer_pipeline.rs  status.rs
src-tauri/src/window/: mod.rs  monitor.rs  position.rs
(+710 files in other folders)
