[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/catprinter",
    "crates/twitch-client",
    "crates/overlay-db",
    "crates/word-filter",
    "crates/image-engine",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
