[package]
name = "catprinter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
btleplug = "0.11"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
image = "0.25"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
