[package]
name = "overlay-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
