[package]
name = "twitch-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = "2"
futures-util = "0.3"
